bin/testsuite/tests/compiler/src/errors/compiler5359.swg
#global testerror "Err0668"

attr 0();